# ed25519-vanity-rs

./: Cargo.toml  build.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
scripts/: vast.sh
