[package]
name = "ed25519_vanity"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
rand = "0.8"

# christan's branch
cust = { git = "https://github.com/LegNeato/Rust-CUDA.git", branch = "fixsha2" }

# normal
#cust = { git = "https://github.com/Rust-GPU/Rust-CUDA.git" }

[build-dependencies]
# christian's branch
cuda_builder = { git = "https://github.com/LegNeato/Rust-CUDA.git", branch = "fixsha2" }

# normal
#cuda_builder = { git = "https://github.com/Rust-GPU/Rust-CUDA.git" }
