[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = { version = "0.10.8", default-features = false, features = ["force-soft"] }

# christian's branch
cuda_std = { git = "https://github.com/LegNeato/Rust-CUDA.git", branch = "fixsha2" }

# normal
#cuda_std = { git = "https://github.com/Rust-GPU/Rust-CUDA.git" }
